# TestProjects

./: .clang-format  TestFuncs.pri  TestFuncsCommon.pri  git_access_token.txt  pch.h  ucPch.h
TestFuncs/: CMakeLists.txt  TestFuncs.pro  conanfile.py  main.cpp
TestFuncsCommon/: pch.h  ucPch.h
TestFuncsGui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  TestFuncsGui.pro  conanfile.py
TestFuncsVs/: TestFuncsVs.sln  TestFuncsVs.vcxproj  TestFuncsVs.vcxproj.filters  main.cpp
VMwareUser/: LinuxList.txt  WindowsList.txt  machine_names.json  main.py
